feat: 开发ollama模块功能添加dto