@@ -7,6 +7,7 @@ import com.example.exception.StudyJavaException;
 import com.example.mapper.StudyJavaUserMapper;
 import com.example.service.StudyJavaUserService;
 import jakarta.annotation.Resource;
+import lombok.NonNull;
 import org.springframework.stereotype.Service;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import org.springframework.web.multipart.MultipartFile;
@@ -20,6 +21,7 @@ import java.awt.image.BufferedImage;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.util.Base64;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -33,38 +35,52 @@ public class StudyJavaUserServiceImp implements StudyJavaUserService {
      */
     @Override
     public IPage<StudyJavaUserDto> getUserList(Page<StudyJavaUserVo> page ,StudyJavaUserVo userQueryData) {
-
         IPage<StudyJavaUserDao> userPageResult = studyJavaUserMapper.getUserList(page,userQueryData);
-        List<StudyJavaUserDto> userList = userPageResult.getRecords().stream().map(user -> {
-            StudyJavaUserDto studyJavaUserDto = new StudyJavaUserDto();
-            studyJavaUserDto.setUserId(user.getUserId());
-            studyJavaUserDto.setAddress(user.getAddress());
-            studyJavaUserDto.setNickName(user.getNickName());
-            studyJavaUserDto.setLoginName(user.getLoginName());
-            studyJavaUserDto.setIntroduceSign(user.getIntroduceSign());
-            studyJavaUserDto.setCreateTime(user.getCreateTime());
-            // 年龄 随机生成
-            Random random = new Random();
-            Integer age = random.nextInt(100);
-            studyJavaUserDto.setAge(age);
-            return studyJavaUserDto;
-        }).toList();
+        List<StudyJavaUserDto> userList = userPageResult.getRecords().stream().map(this::makeDaoToDto).collect(Collectors.toList());
         // 创建新的 IPage 对象
         IPage<StudyJavaUserDto> resultPage = new Page<>(userPageResult.getCurrent(), userPageResult.getSize(), userPageResult.getTotal());
         resultPage.setRecords(userList);
 
         return resultPage;
     }
+
+    /**
+     * dao 2 dto
+     * @param userInfoDao StudyJavaUserDao
+     * @return StudyJavaUserDto
+     */
+    private StudyJavaUserDto makeDaoToDto(StudyJavaUserDao userInfoDao) {
+        StudyJavaUserDto studyJavaUserDto = new StudyJavaUserDto();
+        studyJavaUserDto.setUserId(userInfoDao.getUserId());
+        studyJavaUserDto.setAddress(userInfoDao.getAddress());
+        studyJavaUserDto.setNickName(userInfoDao.getNickName());
+        studyJavaUserDto.setLoginName(userInfoDao.getLoginName());
+        studyJavaUserDto.setIntroduceSign(userInfoDao.getIntroduceSign());
+        studyJavaUserDto.setCreateTime(userInfoDao.getCreateTime());
+        // 年龄 随机生成
+        Random random = new Random();
+        Integer age = random.nextInt(100);
+        studyJavaUserDto.setAge(age);
+        //        try {
+        //            System.out.print(generateBase64Image());
+        //            userInfoDto.setAvatar(generateBase64Image());  // 调用可能抛出 IOException 的方法
+        //        } catch (IOException e) {
+        //            e.printStackTrace();  // 或者记录日志
+        //            // 根据需要处理异常，可以设定一个默认值
+        //            userInfoDto.setAvatar("");  // 设置默认头像
+        //        }
+        return studyJavaUserDto;
+    };
     @Override
     public int updateUserInfo(StudyJavaUserVo studyJavaUser) {
         return studyJavaUserMapper.updateUserInfo(studyJavaUser);
     }
 
     @Override
-    public String updateUserAvatar(String userId, MultipartFile file) throws IOException {
+    public String updateUserAvatar(@NonNull String userId, @NonNull MultipartFile file) throws IOException {
         //  将文件转成base64
         if (file.isEmpty()) {
-            throw new IOException("上传的文件为空");
+            throw new StudyJavaException("上传的文件为空");
         }
         // 将文件转成字节数组
         byte[] fileBytes = file.getBytes();
@@ -77,6 +93,11 @@ public class StudyJavaUserServiceImp implements StudyJavaUserService {
         return base64ImageUrl;
     };
 
+    /**
+     * 创建一条数据
+     * @param studyJavaUser StudyJavaUserVo
+     * @return int
+     */
     @Override
     public int insertUserInfo(StudyJavaUserVo studyJavaUser) {
         studyJavaUser.setIsDeleted(0);
@@ -86,6 +107,11 @@ public class StudyJavaUserServiceImp implements StudyJavaUserService {
         return studyJavaUserMapper.insertUserInfo(studyJavaUser);
     }
 
+    /**
+     * 删除用户
+     * @param studyJavaUser StudyJavaUserVo
+     * @return int
+     */
     @Override
     public int deleteUserInfo(StudyJavaUserVo studyJavaUser) {
         return studyJavaUserMapper.deleteUserInfo(studyJavaUser);
@@ -117,48 +143,29 @@ public class StudyJavaUserServiceImp implements StudyJavaUserService {
         byte[] imageBytes = byteArrayOutputStream.toByteArray();
 
         // 编码为 Base64
-        String base64Image = Base64.getEncoder().encodeToString(imageBytes);
-
-        return base64Image;
+        return Base64.getEncoder().encodeToString(imageBytes);
     }
 
     @Override
     public StudyJavaUserDto getUserInfo(StudyJavaUserVo studyJavaUserVo){
         StudyJavaUserDao userInfoDao = studyJavaUserMapper.getUserInfo(studyJavaUserVo);
-        StudyJavaUserDto userInfoDto = new StudyJavaUserDto();
-        userInfoDto.setUserId(userInfoDao.getUserId());
-        userInfoDto.setAddress(userInfoDao.getAddress());
-        userInfoDto.setNickName(userInfoDao.getNickName());
-        userInfoDto.setLoginName(userInfoDao.getLoginName());
-        userInfoDto.setIntroduceSign(userInfoDao.getIntroduceSign());
-        userInfoDto.setCreateTime(userInfoDao.getCreateTime());
-        // 年龄 随机生成
-        Random random = new Random();
-        Integer age = random.nextInt(100);
-        userInfoDto.setAge(age);
-        userInfoDto.setAvatar(userInfoDao.getAvatar());
-//        try {
-//            System.out.print(generateBase64Image());
-//            userInfoDto.setAvatar(generateBase64Image());  // 调用可能抛出 IOException 的方法
-//        } catch (IOException e) {
-//            e.printStackTrace();  // 或者记录日志
-//            // 根据需要处理异常，可以设定一个默认值
-//            userInfoDto.setAvatar("");  // 设置默认头像
-//        }
-        return userInfoDto;
+        return makeDaoToDto(userInfoDao);
     }
 
+    /**
+     * 更新用户密码
+     * @param studyJavaUserVo StudyJavaUserVo
+     */
     @Override
     public void updateUserPassword(StudyJavaUserVo studyJavaUserVo) {
         StudyJavaUserDao studyJavaUserDao = studyJavaUserMapper.getUserInfo(studyJavaUserVo);
         String passwordMd5 = studyJavaUserDao.getPasswordMd5();
         String newPasswordMd5 = studyJavaUserVo.getNewPasswordMd5();
         String confirmNewPasswordMd5 = studyJavaUserVo.getConfirmNewPasswordMd5();
-        String originalPasswordMd5 = studyJavaUserDao.getPasswordMd5();
         if (!newPasswordMd5.equals(confirmNewPasswordMd5)) {
             throw new StudyJavaException("两次密码不一致");
         }
-        if (!originalPasswordMd5.equals(passwordMd5)) {
+        if (!newPasswordMd5.equals(passwordMd5)) {
             throw new StudyJavaException("原密码不正确");
         }
 
